--- a/.npmignore
+++ b/.npmignore
@@ -1,18 +1,26 @@
 __mocks__/
 __tests__/
 .github/
+.husky/
 .vscode/
 coverage/
 node_modules/
 src/
 dist/__mocks__/
 dist/__tests__/
+.codacy.yml
+.codeclimate.yml
 .eslintrc
 .gitattributes
 .gitignore
+.markdownlint.json
 .npmignore
-.npmrc
-.prettierrc
+.secrets.baseline
+.snyk
+lint-staged.config.js
+sonar-project.properties
 terrafile.sample.json
 tsconfig.eslint.json
 tsconfig.json
+vite.config.ts
+wordlist.txt
