--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
   "dependencies": {
     "@jestaubach/fs-helpers": "^0.2.16",
     "@jestaubach/terrafile-backend-lib": "^0.1.4",
+    "@xascode/chalk": "^0.1.0",
     "builtin-modules": "^3.3.0",
-    "chalk": "^4.1.2",
     "commander": "^11.0.0",
     "lodash": "^4.17.21",
     "vite": "^4.3.9",
